tests/baselines/reference/importAndVariableDeclarationConflict3.errors.txt
tests/cases/compiler/importAndVariableDeclarationConflict3.ts(5,8): error TS2300: Duplicate identifier 'x'.
tests/cases/compiler/importAndVariableDeclarationConflict3.ts(6,8): error TS2300: Duplicate identifier 'x'.


==== tests/cases/compiler/importAndVariableDeclarationConflict3.ts (2 errors) ====
    module m {
      export var m = '';
    }
    
    import x = m.m;
           ~
!!! error TS2300: Duplicate identifier 'x'.
    import x = m.m;
           ~
!!! error TS2300: Duplicate identifier 'x'.
    